quick changes with gitit

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,6 @@
 {"manifest_version":2,
 "theme":{"images":{"theme_frame":"images/theme_frame.png",
+"theme_ntp_attribution":"images/theme_ntp_attribution.png",
 "theme_toolbar":"images/theme_toolbar.png",
 "theme_tab_background":"images/theme_tab_background.png"},
 "colors":{"frame":[238,232, 213],
