quick changes with gitit

--- a/manifest.json
+++ b/manifest.json
@@ -16,4 +16,4 @@
 "ntp_background_repeat":"no-repeat"}},
 "name":"Solarized Light",
 "version":"1",
-"description":""}
+"description":"Solarized Light chrome theme"}
